--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,15 @@
    "id": "2fe0a5f4-f42e-42f8-a9c5-f6d604d31a76",
    "metadata": {},
    "source": [
-    "# 模型部分"
+    "# 1.模型定义"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "033105c2",
+   "metadata": {},
+   "source": [
+    "1. 导入必要的module"
    ]
   },
   {
@@ -17,6 +25,14 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "726b951c",
+   "metadata": {},
+   "source": [
+    "2. 定义NeuralNetwork类"
    ]
   },
   {
@@ -219,9 +235,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98b844bf",
+   "metadata": {},
+   "source": [
+    "3. 定义绘图函数，用于绘制训练时的Loss与Accuracy曲线"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "af950aa9-3504-451a-b500-945ca0d6f1f4",
+   "execution_count": null,
+   "id": "05be99f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +283,22 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "479b58d6",
+   "metadata": {},
+   "source": [
+    "# 2.加载数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dae14dd9",
+   "metadata": {},
+   "source": [
+    "1. 导入必要module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "9eefa9e7-f497-4625-90de-d85b050ba160",
@@ -270,6 +310,14 @@
     "from torch.utils import data\n",
     "from torchvision import transforms\n",
     "from torch.utils.data import DataLoader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a36ad42",
+   "metadata": {},
+   "source": [
+    "2.下载数据，并对每个数据执行flatten操作，将数据转换为一维向量。最后创建数据加载器"
    ]
   },
   {
@@ -293,6 +341,14 @@
     "# 创建数据加载器\n",
     "train_loader = DataLoader(mnist_train, batch_size=256, shuffle=True)\n",
     "test_loader  = DataLoader(mnist_test, batch_size=256, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15349c15",
+   "metadata": {},
+   "source": [
+    "3.打印数据特征"
    ]
   },
   {
@@ -340,14 +396,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8193c9c-638e-40ce-a90b-4ade11753805",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "681b4956-eeeb-4dd0-9934-710512b2dd6a",
    "metadata": {},
    "outputs": [],
@@ -358,7 +406,7 @@
    "id": "86a9b7ed-6bec-44d6-8964-a9aa2eed1562",
    "metadata": {},
    "source": [
-    "# 参数查找"
+    "# 3.参数查找与训练"
    ]
   },
   {
@@ -400,7 +448,6 @@
     "\n",
     "    print(f\"Best parameters: {best_params}\")\n",
     "    return best_params, best_model_weights\n",
-    "\n",
     "\n"
    ]
   },
@@ -1429,14 +1476,24 @@
    "id": "56eb6ec1-53f2-4dd5-b1a0-1e3d8d4662b7",
    "metadata": {},
    "source": [
-    "# 最优模型训练可视化"
+    "# 4.最优模型训练可视化"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2786802",
+   "metadata": {},
+   "source": [
+    "1.训练并绘制Loss和Accuracy曲线"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "id": "deb1df0d-cee3-4a77-a197-d2548b3ec022",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1575,18 +1632,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca187c0-ec35-4cf3-a12b-4817825a66b5",
-   "metadata": {},
-   "source": [
-    "## 网络参数可视化"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5dae641a-8c0e-4277-b7fc-f8c9e1db9026",
    "metadata": {},
    "source": [
-    "保存最佳模型"
+    "2. 保存最佳模型"
    ]
   },
   {
@@ -1620,7 +1669,7 @@
    "id": "5c312512-3420-4662-9188-51c7c078ae12",
    "metadata": {},
    "source": [
-    "网络参数可视化"
+    "3. 网络参数可视化"
    ]
   },
   {
@@ -1763,7 +1812,7 @@
    "id": "d3ee7458-59dc-4d00-8122-1beb54cdb233",
    "metadata": {},
    "source": [
-    "模型评测"
+    "4. 加载训练好的模型，并在测试集上预测"
    ]
   },
   {
@@ -1795,14 +1844,6 @@
     "test_loss, test_accuracy = model.evaluate(test_loader)\n",
     "print(f\"Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bab56490-a524-4455-8521-ebbd88265b02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1821,7 +1862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
